--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "react-cesium",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +13,7 @@
     "cesium": "^1.109.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "resium": "^1.17.1"
   },
   "devDependencies": {
